tests/snapshots/r#mod__discard__discard_unstaged_delta.snap
---
source: tests/mod.rs
expression: ctx.redact_buffer()
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 10 },
    content: [
        " On branch main                                                                 ",
        " Your branch is ahead of 'origin/main' by 1 commit.                             ",
        "                                                                                ",
        " Recent commits                                                                 ",
        "🢒_______ main add file-one                                                      ",
        " _______ origin/main add initial-file                                           ",
        "                                                                                ",
        "────────────────────────────────────────────────────────────────────────────────",
        "$ git checkout -- file-one                                                      ",
        "                                                                                ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 0, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 3, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 4, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 8, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 9, y: 4, fg: Green, bg: Reset, underline: Reset, modifier: BOLD,
        x: 13, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 5, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 5, fg: Red, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 0, y: 8, fg: Blue, bg: Reset, underline: Reset, modifier: BOLD,
        x: 26, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
